create nav bar fist step

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Complete Responsive Tours & Travel website</title>
+
+    <!-- front awesome cdn file link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- start header stations -->
+    <header>
+      <a href="#" class="logo">travel <span>.</span></a>
+
+      <nav class="navbar">
+        <ul>
+          <li><a href="home" class="active">home</a></li>
+          <li><a href="feature">feature</a></li>
+          <li><a href="about">about</a></li>
+          <li><a href="gallary">gallary</a></li>
+          <li><a href="review">review</a></li>
+          <li><a href="contact">contact</a></li>
+        </ul>
+      </nav>
+  <div class="fas fa-bars"></div>
+
+      <!-- end header stations -->
+    </header>
+
+    <!-- home section start -->
+
+    <!-- home section end -->
+
+    <!-- jquery cdn link -->
+    <script sre="js/main.js"></script>
+  </body>
 </html>
