--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
 
       <nav class="navbar">
         <ul>
-          <li><a href="home" class="active">home</a></li>
-          <li><a href="feature">feature</a></li>
-          <li><a href="about">about</a></li>
-          <li><a href="gallary">gallary</a></li>
-          <li><a href="review">review</a></li>
-          <li><a href="contact">contact</a></li>
+          <li><a data-scroll="home" href="#home" class="active">home</a></li>
+          <li><a data-scroll="feature" href="#feature">feature</a></li>
+          <li><a data-scroll="about" href="#about">about</a></li>
+          <li><a data-scroll="gallery" href="#gallery">gallery</a></li>
+          <li><a data-scroll="review" href="#review">review</a></li>
+          <li><a data-scroll="contact" href="#contact">contact</a></li>
         </ul>
       </nav>
-  <div class="fas fa-bars"></div>
 
-      <!-- end header stations -->
+      <div class="fas fa-bars"></div>
     </header>
 
-    <!-- home section start -->
+   
 
-    <!-- home section end -->
+
+
+    <!-- jquery cdn link  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- jquery cdn link -->
-    <script sre="js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
