create home part

--- a/index.html
+++ b/index.html
@@ -32,7 +32,47 @@
       <div class="fas fa-bars"></div>
     </header>
 
-   
+    <!-- home section start -->
+    <section class="home" id="home">
+      <div class="video">
+        <video src="images/home-video.mp4" loop muted autoplay></video>
+      </div>
+
+      <div class="content">
+        <h1>
+          explore new places, <br />
+          adventure awaits.
+        </h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat in
+          iure qui, quos magnam, porro obcaecati ex adipisci libero commodi
+          quasi accusantium ut veniam voluptatibus? Assumenda vitae facilis
+          magnam?
+        </p>
+      </div>
+
+      <div class="form-container">
+        <form action="">
+          <h3>search your destination</h3>
+
+          <span>location</span>
+          <input type="text" placeholder="place you want to visit" />
+
+          <span>guest members</span>
+          <input type="number" placeholder="number of peoples" />
+
+          <span>arrival</span>
+          <input type="date" />
+
+          <span>leaving</span>
+          <input type="date" />
+
+          <input type="submit" value="search" />
+        </form>
+      </div>
+    </section>
+    <!-- home section end -->
+
 
 
 
