create feature section

--- a/index.html
+++ b/index.html
@@ -73,8 +73,88 @@
     </section>
     <!-- home section end -->
 
+    <!-- feature section starts  -->
+
+<section class="feature" id="feature">
 
 
+    <h1 class="heading"><span>f</span>eatured <span>l</span>ocations</h1>
+
+    <div class="card-container">
+
+    <div class="card">
+      <span class="discount">-35%</span>
+      <img src="images/featued-img-1.jpg" alt="" />
+      <div class="content">
+        <h3 class="tital">hawaii</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+          voluptates numquam a rerum qui? Consequatur voluptas officiis harum ex
+          quidem.
+        </p>
+        <div class="start">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+        <a href=""> <button class="btn">check out!</button></a>
+      </div>
+    </div>
+
+
+    <div class="card">
+      <span class="discount">-35%</span>
+      <img src="images/featued-img-2.jpg" alt="" />
+      <div class="content">
+        <h3 class="tital">hawaii</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+          voluptates numquam a rerum qui? Consequatur voluptas officiis harum ex
+          quidem.
+        </p>
+        <div class="start">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+        <a href=""> <button class="btn">check out!</button></a>
+      </div>
+    </div>
+
+    <div class="card">
+      <span class="discount">-35%</span>
+      <img src="images/featued-img-3.jpg" alt="" />
+      <div class="content">
+        <h3 class="tital">hawaii</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+          voluptates numquam a rerum qui? Consequatur voluptas officiis harum ex
+          quidem.
+        </p>
+        <div class="start">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+        <a href=""> <button class="btn">check out!</button></a>
+      </div>
+    </div>
+
+
+    </div>
+    </section>
+
+
+
+   
+
+    <!-- feature section end  -->
 
     <!-- jquery cdn link  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
