--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- start header stations -->
+    <!--  header stations -->
     <header>
       <a href="#" class="logo">travel <span>.</span></a>
 
@@ -32,7 +32,7 @@
       <div class="fas fa-bars"></div>
     </header>
 
-    <!-- home section start -->
+    <!-- home section  -->
     <section class="home" id="home">
       <div class="video">
         <video src="images/home-video.mp4" loop muted autoplay></video>
@@ -47,7 +47,7 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat in
           iure qui, quos magnam, porro obcaecati ex adipisci libero commodi
           quasi accusantium ut veniam voluptatibus? Assumenda vitae facilis
-          magnam?
+          magnam
         </p>
       </div>
 
@@ -73,88 +73,176 @@
     </section>
     <!-- home section end -->
 
-    <!-- feature section starts  -->
+    <!-- feature section s  -->
 
-<section class="feature" id="feature">
+    <section class="feature" id="feature">
+      <h1 class="heading"><span>f</span>eatured <span>l</span>ocations</h1>
 
-
-    <h1 class="heading"><span>f</span>eatured <span>l</span>ocations</h1>
-
-    <div class="card-container">
-
-    <div class="card">
-      <span class="discount">-35%</span>
-      <img src="images/featued-img-1.jpg" alt="" />
-      <div class="content">
-        <h3 class="tital">hawaii</h3>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
-          voluptates numquam a rerum qui? Consequatur voluptas officiis harum ex
-          quidem.
-        </p>
-        <div class="start">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
+      <div class="card-container">
+        <div class="card">
+          <span class="discount">-35%</span>
+          <img src="images/featued-img-1.jpg" alt="" />
+          <div class="content">
+            <h3 class="title">hawaii</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+              voluptates numquam a rerum qui? Consequatur voluptas officiis
+              harum ex quidem.
+            </p>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href=""> <button class="btn">check out!</button></a>
+          </div>
         </div>
-        <a href=""> <button class="btn">check out!</button></a>
-      </div>
-    </div>
 
-
-    <div class="card">
-      <span class="discount">-35%</span>
-      <img src="images/featued-img-2.jpg" alt="" />
-      <div class="content">
-        <h3 class="tital">hawaii</h3>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
-          voluptates numquam a rerum qui? Consequatur voluptas officiis harum ex
-          quidem.
-        </p>
-        <div class="start">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
+        <div class="card">
+          <span class="discount">-35%</span>
+          <img src="images/featued-img-2.jpg" alt="" />
+          <div class="content">
+            <h3 class="title">hawaii</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+              voluptates numquam a rerum qui? Consequatur voluptas officiis
+              harum ex quidem.
+            </p>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href=""> <button class="btn">check out!</button></a>
+          </div>
         </div>
-        <a href=""> <button class="btn">check out!</button></a>
-      </div>
-    </div>
 
-    <div class="card">
-      <span class="discount">-35%</span>
-      <img src="images/featued-img-3.jpg" alt="" />
-      <div class="content">
-        <h3 class="tital">hawaii</h3>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
-          voluptates numquam a rerum qui? Consequatur voluptas officiis harum ex
-          quidem.
-        </p>
-        <div class="start">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
+        <div class="card">
+          <span class="discount">-35%</span>
+          <img src="images/featued-img-3.jpg" alt="" />
+          <div class="content">
+            <h3 class="title">hawaii</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+              voluptates numquam a rerum qui? Consequatur voluptas officiis
+              harum ex quidem.
+            </p>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+            <a href=""> <button class="btn">check out!</button></a>
+          </div>
         </div>
-        <a href=""> <button class="btn">check out!</button></a>
       </div>
-    </div>
-
-
-    </div>
     </section>
 
+    <section id="about" class="about">
+      <h1 class="heading"><samp>a</samp>bout <span>u</span>s</h1>
+      <div class="row">
+        <div class="image">
+          <img src="images/about-img.png" alt="" />
+        </div>
 
+        <div class="content">
+          <h3>why choose us ?</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipis icing elit. Enim quis
+            odio ullam eos, unde debitis nihil veritatis minima, ratione fugit,
+            quas perspiciatis.
+          </p>
+          <br />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque,
+            animi!
+          </p>
+          <a href="#"><button class="btn btn1">read more</button></a>
 
-   
+          <a href="#"><button class="btn">get started</button></a>
+        </div>
+      </div>
+    </section>
 
     <!-- feature section end  -->
+
+    
+<!-- gallery section starts  -->
+
+<section id="gallery" class="gallery">
+
+<h1 class="heading"><span>g</span>allery</h1>
+
+<div class="box-container">
+
+    <div class="box">
+        <img src="images/gallery-img-1.jpg" alt="">
+        <div class="icons">
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="images/gallery-img-2.jpg" alt="">
+        <div class="icons">
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="images/gallery-img-3.jpg" alt="">
+        <div class="icons">
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="images/gallery-img-4.jpg" alt="">
+        <div class="icons">
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="images/gallery-img-5.jpg" alt="">
+        <div class="icons">
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+        </div>
+    </div>
+
+    <div class="box">
+        <img src="images/gallery-img-6.jpg" alt="">
+        <div class="icons">
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-share"></a>
+            <a href="#" class="fas fa-search"></a>
+        </div>
+    </div>
+
+</div>
+
+</section>
+
+<!-- gallery section ends -->
+
+
+
 
     <!-- jquery cdn link  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
