--- a/index.html
+++ b/index.html
@@ -172,77 +172,231 @@
 
     <!-- feature section end  -->
 
-    
-<!-- gallery section starts  -->
+    <!-- gallery section starts  -->
 
-<section id="gallery" class="gallery">
+    <section id="gallery" class="gallery">
+      <h1 class="heading"><span>g</span>allery</h1>
 
-<h1 class="heading"><span>g</span>allery</h1>
-
-<div class="box-container">
-
-    <div class="box">
-        <img src="images/gallery-img-1.jpg" alt="">
-        <div class="icons">
+      <div class="box-container">
+        <div class="box">
+          <img src="images/gallery-img-1.jpg" alt="" />
+          <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-share"></a>
             <a href="#" class="fas fa-search"></a>
+          </div>
         </div>
-    </div>
 
-    <div class="box">
-        <img src="images/gallery-img-2.jpg" alt="">
-        <div class="icons">
+        <div class="box">
+          <img src="images/gallery-img-2.jpg" alt="" />
+          <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-share"></a>
             <a href="#" class="fas fa-search"></a>
+          </div>
         </div>
-    </div>
 
-    <div class="box">
-        <img src="images/gallery-img-3.jpg" alt="">
-        <div class="icons">
+        <div class="box">
+          <img src="images/gallery-img-3.jpg" alt="" />
+          <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-share"></a>
             <a href="#" class="fas fa-search"></a>
+          </div>
         </div>
-    </div>
 
-    <div class="box">
-        <img src="images/gallery-img-4.jpg" alt="">
-        <div class="icons">
+        <div class="box">
+          <img src="images/gallery-img-4.jpg" alt="" />
+          <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-share"></a>
             <a href="#" class="fas fa-search"></a>
+          </div>
         </div>
-    </div>
 
-    <div class="box">
-        <img src="images/gallery-img-5.jpg" alt="">
-        <div class="icons">
+        <div class="box">
+          <img src="images/gallery-img-5.jpg" alt="" />
+          <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-share"></a>
             <a href="#" class="fas fa-search"></a>
+          </div>
         </div>
-    </div>
 
-    <div class="box">
-        <img src="images/gallery-img-6.jpg" alt="">
-        <div class="icons">
+        <div class="box">
+          <img src="images/gallery-img-6.jpg" alt="" />
+          <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-share"></a>
             <a href="#" class="fas fa-search"></a>
+          </div>
         </div>
-    </div>
+      </div>
+    </section>
 
+    <!-- gallery section ends -->
+
+    <!-- review section started -->
+
+    <section id="review" class="review">
+      <h1 class="heading"><span>r</span>eview</h1>
+
+      <div class="box-container">
+        <div class="box">
+          <div class="image">
+            <img src="images/pic-2.png" alt="" />
+          </div>
+          <div class="content">
+            <h3>someone's name</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Exercitationem, minima! Quibusdam vero perferendis nulla ipsam at
+              neque voluptas voluptatibus distinctio?
+            </p>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="images/pic-3.png" alt="" />
+          </div>
+          <div class="content">
+            <h3>someone's name</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Exercitationem, minima! Quibusdam vero perferendis nulla ipsam at
+              neque voluptas voluptatibus distinctio?
+            </p>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="images/pic-4.png" alt="" />
+          </div>
+          <div class="content">
+            <h3>someone's name</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Exercitationem, minima! Quibusdam vero perferendis nulla ipsam at
+              neque voluptas voluptatibus distinctio?
+            </p>
+            <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star-half-alt"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- review section end -->
+
+    <!-- contact section start -->
+    <section id="contact" class="contact">
+      <h1 class="heading"><span>c</span>ontact <span>u</span>s</h1>
+
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31677.742095927675!2d81.14364601369527!3d7.042417422850865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae48ad28bd8e1cf%3A0x1db2479a97eed196!2z4La44Lap4LeU4La94LeK4LeD4LeS4La4!5e0!3m2!1ssi!2slk!4v1662267926137!5m2!1ssi!2slk"
+        width="100%"
+        height="300"
+        style="border: 0; outline: none"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+
+      <div class="row">
+        <div class="contact-info">
+          <div class="box">
+            <h3><i class="fas fa-home"></i> address</h3>
+            <p>
+              369, <br />
+              parakadamulla, <br />
+              Henegama.
+            </p>
+          </div>
+
+          <div class="box">
+            <h3><i class="fas fa-envelope"></i> e-mail</h3>
+            <p>harshanan369@gmail.com</p>
+          </div>
+
+          <div class="box">
+            <h3><i class="fas fa-phone"></i> phone</h3>
+            <p>+94756974718</p>
+          </div>
+        </div>
+
+        <div class="contact-form-container">
+          <form action="">
+            <h3>get in touch</h3>
+
+            <div class="inputBox">
+              <input type="text" placeholder="full name" />
+              <input type="email" placeholder="e-mail" />
+            </div>
+
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="message"
+            ></textarea>
+
+            <input type="submit" value="message" />
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section class="newsletter">
+      <h1>sign up 25% discount</h1>
+
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam
+        provident saepe vel pariatur incidunt libero quo nisi ratione. Ea,
+        corporis.
+      </p>
+
+      <form action="">
+        <input type="email" placeholder="enter your email" />
+        <input type="submit" value="sign up" />
+      </form>
+    </section>
+
+
+    <section class="footer">
+
+<h1 class="credit">created by <span>mr. Harshana</span> | all rights reserved.</h1>
+
+<div class="icons">
+    <a href="#" class="fab fa-facebook-f"></a>
+    <a href="#" class="fab fa-twitter"></a>
+    <a href="#" class="fab fa-instagram"></a>
+    <a href="#" class="fab fa-github"></a>
 </div>
 
 </section>
 
-<!-- gallery section ends -->
-
-
-
+    <!-- contact section end -->
 
     <!-- jquery cdn link  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
